<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">Chaddap</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dash_string">  -  </string>
    <string name="desc">The picture the user posted with this comment.</string>
    <string name="new_location_name_edittext">Enter location name</string>
    <string name="welcome_msg">Welcome to Chaddap!</string>

    <!-- Overlay Description Strings -->
    <string name="overlay_description">Help Overlay</string>

    <!-- ActionBar Strings -->

    <string name="action_map">Map Thread</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_edit_username">Edit Username</string>
    <string name="action_sort">Sort</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_want_to_read">Want to Read</string>
    <string name="action_reply">Reply</string>
    <string name="action_title">Title</string>
    <string name="action_add_head_comment">Add Head Comment</string>
    <string name="action_refresh_comments">Refresh Comments</string>

    <!-- SubCommentView -->
    <string name="title_activity_sub_comment_view">SubCommentViewActivity</string>
    <string name="comment_image">Head Comment Image</string>
    <string name="long_title">Long Title</string>
    <string name="reply_title">Re:Title</string>
    <string name="sub_title">Sub-Title</string>
    <string name="reply_option">Reply</string>
    <string name="written_by">Written By: Username</string>
    <string name="time_string">Time</string>
    <string name="more_option">More&#8230;</string>
    <string name="text_body">Some example text. Some example text. Some example text. 
        					 Some example text. Some example text. Some example text. 
        					 Some example text. Some example text. Some example text. 
        					 Some example text. Some example text. Some example text. 
        					 Some example text. Some example text. Some example text. 
        					 Some example text. Some example text. Some example text. </string>
    <string name="create_comment_title">Please Enter a Title</string>
    <string name="create_comment_username">Please Enter a Username</string>
    <string name="create_comment_content">Compose Comment</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="number_of_favourites">Number of Favourites</string>
    <string name="pictures">Pictures</string>
    <string name="sort_subtitle">sort by:</string>
    <string name="comments_sav">comments.sav</string>
    <string name="user_sav">user.sav</string>
    <string name="title_activity_set_user_name">SetUserNameActivity</string>
    <string name="set_username">Enter Username</string>
    <string name="set_button">Set</string>
    <string name="skip_button">Skip this Step</string>
    <string name="head_comment_list_at">at</string>
    <string name="head_comment_list_location">location</string>

    <!-- LocationListenerController -->
    <string name="gps_appears_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="current_best_loc_on_search">Current best location on search: </string>
    <string name="current_best_loc_on_create">Current best location on create: </string>
    <string name="title_activity_favourites_view">FavouritesViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_">A</string>
    <string name="userlocation">User Location</string>

</resources>
