<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Reply, should appear as action button -->
    <item
        android:id="@+id/action_reply"
        android:showAsAction="ifRoom"
        android:title="@string/action_reply"/>
    <item
        android:id="@+id/refresh_comments_sub"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh_comments"/>
    <!-- Map, should appear as action button -->
    <item
        android:id="@+id/action_map"
        android:showAsAction="ifRoom"
        android:title="@string/action_map"/>

    <!-- Favourite -->
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_action_favourite"
        android:showAsAction="always"
        android:title="@string/action_favourite"/>

    <!-- Edit Username -->
    <item
        android:id="@+id/action_edit_username"
        android:showAsAction="never"
        android:title="@string/action_edit_username"/>

    <!-- Sort -->
    <item
        android:id="@+id/action_sort"
        android:showAsAction="never"
        android:title="@string/action_sort"/>

</menu>