<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_action_favourite"
        android:showAsAction="always"
        android:title="@string/action_favourite"/>
    <item
        android:id="@+id/action_edit_username"
        android:showAsAction="never"
        android:title="@string/action_edit_username"/>
    <item
        android:id="@+id/action_sort"
        android:showAsAction="never"
        android:title="@string/action_sort"/>
    <item
        android:id="@+id/action_favourites"
        android:showAsAction="never"
        android:title="@string/action_favourites"/>
    <item
        android:id="@+id/action_want_to_read"
        android:showAsAction="never"
        android:title="@string/action_want_to_read"/>

</menu>