<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/set_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dip"
        android:ems="10"
        android:hint="@string/set_username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            style="@android:attr/buttonBarButtonStyle"
     		android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/set_button" />
        

        <Button
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/skip_button" />
    </LinearLayout>

</LinearLayout>