<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Right sided Thumbnail image -->

    <LinearLayout
        android:id="@+id/sub_comment_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/sub_comment_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/comment_image" />
    </LinearLayout>

    <!-- Reply Title -->

    <TextView
        android:id="@+id/reply_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sub_comment_thumbnail"
        android:text="@string/reply_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <!-- Sub Title -->

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/reply_title"
        android:text="@string/sub_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <!-- Author of sub comment -->

    <TextView
        android:id="@+id/sub_comment_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sub_title"
        android:layout_marginTop="1dip"
        android:text="@string/written_by"
        android:textSize="12sp" />

    <!-- Location -->

    <TextView
        android:id="@+id/sub_comment_location_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sub_comment_author"
        android:layout_marginTop="1dip"
        android:text="@string/location"
        android:textSize="12sp" />

    <!-- dash seperating location and time -->

    <TextView
        android:id="@+id/sub_comment_dash_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_comment_author"
        android:layout_marginLeft="1dip"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@id/sub_comment_location_sub"
        android:text="@string/dash_string"
        android:textSize="12sp" />

    <!-- Time -->

    <TextView
        android:id="@+id/sub_comment_time_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_comment_author"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@id/sub_comment_dash_sub"
        android:text="@string/time_string"
        android:textSize="12sp" />

    <!-- Head comment text body -->

    <TextView
        android:id="@+id/sub_comment_text_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sub_comment_location_sub"
        android:layout_marginTop="1dip"
        android:text="@string/text_body"
        android:textSize="12sp" />

    <!-- Sub comment options -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sub_comment_text_body"
        android:orientation="horizontal" >

        <!-- Reply Button -->

        <Button
            android:id="@+id/reply_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/reply_option"
            android:textSize="12sp" />

        <!-- favourite Button -->

        <ImageButton
            android:id="@+id/favourite_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/want_to_read_option"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_action_favourite" />

        <!-- Want to Read Button -->

        <ImageButton
            android:id="@+id/want_to_read_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/edit_option"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_action_bookmark" />

        <!-- Edit Button -->

        <ImageButton
            android:id="@+id/edit_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_action_edit" />
    </RelativeLayout>

</RelativeLayout>