<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head_comment_item_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Right sided Thumbnail image -->

    <LinearLayout
        android:id="@+id/head_comment_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/head_comment_image"
            android:layout_width="75dip"
            android:layout_height="75dip"
            android:contentDescription="@string/comment_image" />
    </LinearLayout>

    <!-- Long title of head comment -->

    <TextView
        android:id="@+id/long_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/head_comment_thumbnail"
        android:text="@string/long_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <!-- Author of head comment -->

    <TextView
        android:id="@+id/head_comment_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/long_title"
        android:layout_marginTop="1dip"
        android:text="@string/written_by"
        android:textSize="12sp" />

    <!-- Location -->

    <TextView
        android:id="@+id/head_comment_location_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/head_comment_author"
        android:layout_marginTop="1dip"
        android:text="@string/location"
        android:textSize="12sp" />
    
	<!-- dash seperating location and time -->
    <TextView
        android:id="@+id/head_comment_dash_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_comment_author"
  		android:layout_toRightOf="@id/head_comment_location_sub"
        android:layout_marginTop="1dip"
        android:layout_marginLeft="1dip"
        android:text="@string/dash_string"
        android:textSize="12sp" />

    <!-- Time -->
    <TextView
        android:id="@+id/head_comment_time_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  		android:layout_below="@id/head_comment_author"
  		android:layout_toRightOf="@id/head_comment_dash_sub"
        android:layout_marginTop="1dip"
        android:text="@string/time_string"
        android:textSize="12sp" />

    <!-- Head comment text body -->

    <TextView
        android:id="@+id/head_comment_text_body_sub"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/head_comment_thumbnail"
        android:layout_marginTop="1dip"
        android:text="@string/text_body"
        android:textSize="12sp" />

        <!-- Want to Read Button -->

        <ImageButton
            android:id="@+id/head_want_to_read_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/head_comment_text_body_sub"
            android:layout_toLeftOf="@+id/head_edit_option"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_action_bookmark"/>
        
       	<!-- Edit Button -->

        <ImageButton
            android:id="@+id/head_edit_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/head_comment_text_body_sub"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_action_edit"/>

</RelativeLayout>