<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head_comment_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/head_comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/head_comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/head_comment_title"
        android:textSize="12sp"
        android:layout_marginRight="5dp" />
    
    <TextView
        android:id="@+id/head_comment_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_comment_title"
        android:layout_toRightOf="@id/head_comment_username"
        android:textSize="12sp"
        android:layout_marginRight="5dp"
        android:text="@string/head_comment_list_at" />
    
    <TextView
        android:id="@+id/head_comment_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_comment_title"
        android:layout_toRightOf="@id/head_comment_at"
        android:textSize="12sp"
        android:text="@string/head_comment_list_location" />
    
    <TextView
        android:id="@+id/head_comment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_comment_username"
        android:layout_alignParentLeft="true"
        android:textSize="12sp" />
    
    <ImageView
        android:id="@+id/head_comment_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_camera"
        android:contentDescription="@string/comment_image" />
        

</RelativeLayout>
